<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/light_blue"
    android:fillViewport="true">

    <!-- 26-04-2022, NIM:10119248, Syifa Nur Afifah, IF-6 -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/verify"
            android:layout_marginTop="@dimen/dimen108dp"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verivy2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/white"
            android:textSize="34sp"/>
        <TextView
            android:id="@+id/deskripsi"
            android:gravity="center"
            android:layout_marginTop="@dimen/dimen175dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verifydesc"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/bg_invite_friends"
            android:textSize="14sp"/>

        <LinearLayout

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/dimen200dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >
            <EditText
                android:gravity="center"
                style="@style/EdtWhiteFour16"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen50dp"
                android:layout_marginTop="@dimen/dimen50dp"
                android:autofillHints="@color/bg_invite_friends"
                android:backgroundTint="@color/bg_invite_friends"
                android:hint="@string/code"
                android:inputType="number" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/dimen20dp"
                android:background="@drawable/border_button"
                tools:context=".MainActivity">

                <Button
                    android:id="@+id/veryacc"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="@dimen/dimen350dp"
                    android:layout_height="wrap_content"
                    android:text="@string/send"
                    android:textColor="@color/bg_invite_friends"
                    android:textSize="15sp" />


            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen20dp"
                android:gravity="center">
                <TextView
                    android:id="@+id/account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/send2"
                    android:textColor="@color/bg_invite_friends"/>

            </LinearLayout>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>