<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    tools:context=".MainActivity">

    <!-- 25-04-2022, NIM:10119248, Syifa Nur Afifah, IF-6 -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
    <LinearLayout
        android:layout_width="@dimen/dimen343dp"
        android:layout_height="@dimen/dimen175dp"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dimen95dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <ImageView
            android:layout_width="@dimen/dimen150dp"
            android:layout_height="@dimen/dimen150dp"
            android:src="@drawable/ic_welcome_logo"
            android:layout_marginStart="@dimen/dimen95dp"
            tools:ignore="ImageContrastCheck"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="@dimen/dimen343dp"
        android:layout_height="@dimen/dimen460dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dimen260dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen16dp"
            android:layout_marginBottom="@dimen/dimen20dp"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <EditText
                android:id="@+id/username"
                style="@style/EdtWhiteFour16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen26dp"
                android:backgroundTint="@color/white"
                android:hint="@string/username"
                android:paddingBottom="@dimen/dimen20dp"
                android:textColorHint="@color/white"
                app:placeholderText="Username"
                app:placeholderTextColor="@color/white" />

            <EditText
                style="@style/EdtWhiteFour16"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen48dp"
                android:layout_marginTop="@dimen/dimen15dp"
                android:backgroundTint="@color/white"
                android:hint="@string/pass"
                android:inputType="textPassword"
                android:paddingBottom="@dimen/dimen18dp"
                app:placeholderText="Password"
                app:placeholderTextColor="@color/white" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/dimen20dp"
                android:background="@drawable/border_button"
                tools:context=".MainActivity">

                <Button
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="@dimen/dimen350dp"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/dimen20dp"
                tools:context=".MainActivity">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen161dp"
                    android:text="@string/or"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/dimen10dp"
                android:background="@drawable/border_button"
                tools:context=".MainActivity">

                <ImageView
                    android:layout_width="@dimen/dimen31dp"
                    android:layout_height="@dimen/dimen31dp"
                    android:layout_marginStart="@dimen/dimen22dp"
                    android:layout_marginTop="@dimen/dimen10dp"
                    android:src="@drawable/ic_welcome_fb_login"
                    tools:ignore="ImageContrastCheck" />

                <Button

                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="@dimen/dimen350dp"
                    android:layout_height="wrap_content"
                    android:text="@string/fb"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen20dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/noakun"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen7dp"
                    android:onClick="btnRegister"
                    android:text="@string/reg"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    tools:ignore="TouchTargetSizeCheck" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>