<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dimen30dp"
    android:background="@color/light_blue">
    <!-- 25-04-2022, NIM:10119248, Syifa Nur Afifah, IF-6 -->

    <TextView
        android:layout_marginTop="@dimen/dimen108dp"
        android:id="@+id/almost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/almostlog"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/white"
        android:textSize="32sp"/>

    <TextView
        android:id="@+id/description"
        android:layout_width="@dimen/dimen260dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/dimen20dp"
        app:layout_constraintTop_toBottomOf="@id/almost"
        android:text="@string/almostdesc"
        android:textColor="@color/bg_invite_friends"
        android:gravity="center"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dimen350dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/border_button"
            tools:context=".MainActivity">

            <Button
                android:id="@+id/veri"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="@dimen/dimen350dp"
                android:layout_height="wrap_content"
                android:text="@string/verify"
                android:textColor="@color/white"
                android:textSize="15sp" />

        </RelativeLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

